--- a/lda/pom.xml
+++ b/lda/pom.xml
@@ -117,6 +117,19 @@
           </plugin>
           
           <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-jar-plugin</artifactId>
+               <version>2.2</version>
+               <executions>
+                 <execution>
+                   <goals>
+                     <goal>test-jar</goal>
+                   </goals>
+                 </execution>
+               </executions>
+         </plugin>
+          
+          <plugin>
 		      <artifactId>maven-source-plugin</artifactId>
 		      <version>2.1.1</version>
 		      <executions>
