--- a/elda-system-tests/pom.xml
+++ b/elda-system-tests/pom.xml
@@ -166,6 +166,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.9</version>
         <executions>
+        
           <execution>
             <id>test</id>
             <phase>integration-test</phase>
@@ -176,6 +177,7 @@
               <skipTests>true</skipTests>
             </configuration>
           </execution>
+          
           <execution>
             <id>integration-test</id>
             <phase>integration-test</phase>
@@ -183,9 +185,11 @@
               <goal>test</goal>
             </goals>
             <configuration>
+              <includes><include>**/*Tests.java</include></includes>
               <skipTests>${skip-integration-test}</skipTests>
             </configuration>
           </execution>
+          
         </executions>
       </plugin>
 
