--- a/json-rdf/pom.xml
+++ b/json-rdf/pom.xml
@@ -25,7 +25,7 @@
     <dependency>
     	<groupId>com.hp.hpl.jena</groupId>
     	<artifactId>arq</artifactId>
-    	<version>2.8.9-20110714.092006-22</version>
+    	<version>2.8.9-SNAPSHOT</version>
     </dependency>
 
   </dependencies>
