Tidying up POM files to appease the release plugin.

--- a/deliver-elda/pom.xml
+++ b/deliver-elda/pom.xml
@@ -19,7 +19,7 @@
     <dependency>
       <groupId>com.epimorphics.lda</groupId>
       <artifactId>lda</artifactId>
-      <version>${pom.version}</version>
+      <version>${project.version}</version>
     </dependency>
 
     <dependency>
@@ -38,14 +38,14 @@
     <dependency>
     	<groupId>com.epimorphics.lda</groupId>
     	<artifactId>lda</artifactId>
-    	<version>${pom.version}</version>
+    	<version>${project.version}</version>
     	<classifier>sources</classifier>
     	<scope>compile</scope>
     </dependency>
     <dependency>
     	<groupId>com.epimorphics.lda</groupId>
     	<artifactId>json-rdf</artifactId>
-    	<version>${pom.version}</version>
+    	<version>${project.version}</version>
     	<type>jar</type>
     	<classifier>sources</classifier>
     	<scope>compile</scope>
@@ -71,7 +71,7 @@
 	            <descriptors>
 	                <descriptor>src/assemble/distribution.xml</descriptor>
 	            </descriptors>
-	            <finalName>elda-standalone-${pom.version}</finalName>
+	            <finalName>elda-standalone-${project.version}</finalName>
 	            <appendAssemblyId>false</appendAssemblyId>
 	            <archive>
 	                <manifestEntries>
