--- a/elda-system-tests/pom.xml
+++ b/elda-system-tests/pom.xml
@@ -20,7 +20,7 @@
     <dependency>
         <groupId>com.epimorphics.lda</groupId>
         <artifactId>lda</artifactId>
-        <version>${elda.version}</version>
+        <version>${project.version}</version>
         <type>test-jar</type>
         <scope>test</scope>
     </dependency>
@@ -29,14 +29,14 @@
     <dependency>
       <groupId>com.epimorphics.lda</groupId>
       <artifactId>elda-testing-webapp</artifactId>
-      <version>${elda.version}</version>
+      <version>${project.version}</version>
       <type>war</type>
     </dependency>
 
     <dependency>
       <groupId>com.epimorphics.lda</groupId>
       <artifactId>lda</artifactId>
-      <version>${elda.version}</version>
+      <version>${project.version}</version>
       <type>jar</type>
     </dependency>
 
