--- a/lda/pom.xml
+++ b/lda/pom.xml
@@ -18,7 +18,7 @@
     <dependency>
       <groupId>com.epimorphics.lda</groupId>
       <artifactId>json-rdf</artifactId>
-      <version>${elda.version}</version>
+      <version>${project.version}</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
@@ -26,7 +26,7 @@
     <dependency>
       <groupId>com.epimorphics.lda</groupId>
       <artifactId>json-rdf</artifactId>
-      <version>${elda.version}</version>
+      <version>${project.version}</version>
       <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
