--- a/elda-system-tests/pom.xml
+++ b/elda-system-tests/pom.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <artifactId>lda-top</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>1.1.9-SNAPSHOT</version>
+    <version>1.1.9</version>
   </parent>
 
   <groupId>com.epimorphics.lda</groupId>
@@ -57,7 +56,7 @@
     </dependency>
   </dependencies>
   
-  <version>1.1.9-SNAPSHOT</version>
+  <version>1.1.9</version>
   <build>
 
     <plugins>
