--- a/elda-testing-webapp/pom.xml
+++ b/elda-testing-webapp/pom.xml
@@ -4,14 +4,14 @@
   <parent>
     <artifactId>lda-top</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>1.1.10</version>
+    <version>1.1.11-SNAPSHOT</version>
   </parent>
 
   <groupId>com.epimorphics.lda</groupId>
   <artifactId>elda-testing-webapp</artifactId>
   <packaging>war</packaging>
   <name>elda-testing-webapp</name>
-  <version>1.1.10</version>
+  <version>1.1.11-SNAPSHOT</version>
   <description>webapp for Elda system tests</description>
 
   <dependencies>
