--- a/elda-system-tests/pom.xml
+++ b/elda-system-tests/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <artifactId>lda-top</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>1.1.12-SNAPSHOT</version>
+    <version>1.1.12</version>
   </parent>
 
   <groupId>com.epimorphics.lda</groupId>
@@ -56,7 +56,7 @@
     </dependency>
   </dependencies>
   
-  <version>1.1.12-SNAPSHOT</version>
+  <version>1.1.12</version>
   <build>
 
     <plugins>
