--- a/json-rdf/pom.xml
+++ b/json-rdf/pom.xml
@@ -35,6 +35,7 @@
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
+         <version>2.3.2</version>
          <executions>
            <execution>
              <goals>
