--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <properties>
-    <tempSCM>/tmp/tempSCM</tempSCM>
+    <tempSCM>/tmp/tempSCM</tempSCM>    
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <modelVersion>4.0.0</modelVersion>
@@ -47,7 +48,27 @@
 	<version>1.0-beta-2</version>
       </extension>
     </extensions>
-
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.8</version>
+        <configuration>
+          <!-- Default configuration for all reports -->
+        </configuration>
+        <executions>
+          <execution>
+            <id>aggregate</id>
+            <goals>
+              <goal>aggregate</goal>
+            </goals>
+            <phase>prepare-package</phase>
+            <configuration>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
   </build>
                                
   <distributionManagement>
@@ -165,4 +186,5 @@
     
     <module>elda-testing-webapp</module>
   </modules>
+
 </project>
