--- a/json-rdf/pom.xml
+++ b/json-rdf/pom.xml
@@ -23,9 +23,9 @@
     </dependency>
 
     <dependency>
-    	<groupId>com.hp.hpl.jena</groupId>
-    	<artifactId>arq</artifactId>
-    	<version>2.8.9-SNAPSHOT</version>
+    	<groupId>org.apache.jena</groupId>
+    	<artifactId>jena-arq</artifactId>
+    	<version>2.9.0-incubating</version>
     </dependency>
 
   </dependencies>
