--- a/lda/pom.xml
+++ b/lda/pom.xml
@@ -64,10 +64,9 @@
     </dependency>
 
     <dependency>
-        <groupId>com.hp.hpl.jena</groupId>
-        <artifactId>tdb</artifactId>
-        <version>0.8.11-SNAPSHOT</version>
-        <type>jar</type>
+        <groupId>org.apache.jena</groupId>
+        <artifactId>jena-tdb</artifactId>
+        <version>0.9.0-incubating-SNAPSHOT</version>
     </dependency>
 
     <dependency>
@@ -79,9 +78,9 @@
     </dependency>
 
     <dependency>
-      <groupId>com.hp.hpl.jena</groupId>
-      <artifactId>jena</artifactId>
-      <version>2.6.4</version>
+      <groupId>org.apache.jena</groupId>
+      <artifactId>jena-core</artifactId>
+      <version>2.7.0-incubating</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
