--- a/lda/pom.xml
+++ b/lda/pom.xml
@@ -69,6 +69,7 @@
         <version>0.9.0-incubating-SNAPSHOT</version>
     </dependency>
 
+    <!--
     <dependency>
         <groupId>xalan</groupId>
         <artifactId>xalan</artifactId>
@@ -76,6 +77,25 @@
         <type>jar</type>
         <scope>compile</scope>
     </dependency>
+    -->
+
+    <!-- two saxon dependencies to allow for XSLT2 -->
+    <!-- thanks to derrick.wong@csiro.au -->
+    <dependency>
+        <groupId>net.sf.saxon</groupId>
+        <artifactId>saxon</artifactId>
+        <version>8.7</version>
+        <type>jar</type>
+        <scope>compile</scope>
+    </dependency>
+
+    <dependency>
+        <groupId>net.sf.saxon</groupId>
+        <artifactId>saxon-dom</artifactId>
+        <version>8.7</version>
+        <type>jar</type>
+        <scope>compile</scope>
+    </dependency> 
 
     <dependency>
       <groupId>org.apache.jena</groupId>
