--- a/lda/pom.xml
+++ b/lda/pom.xml
@@ -66,7 +66,7 @@
     <dependency>
         <groupId>org.apache.jena</groupId>
         <artifactId>jena-tdb</artifactId>
-        <version>0.9.0-incubating-SNAPSHOT</version>
+        <version>0.9.0-incubating</version>
     </dependency>
 
     <dependency>
