[maven-release-plugin] prepare release lda-top-1.2.6

--- a/deliver-elda/pom.xml
+++ b/deliver-elda/pom.xml
@@ -4,14 +4,14 @@
   <parent>
     <artifactId>lda-top</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>1.2.6-SNAPSHOT</version>
+    <version>1.2.6</version>
   </parent>
 
   <groupId>com.epimorphics.lda</groupId>
   <artifactId>elda-standalone</artifactId>
   <packaging>war</packaging>
   <name>root</name>
-  <version> 1.2.6-SNAPSHOT</version>
+  <version> 1.2.6</version>
   <description>instant Elda webapp</description>
 
   <dependencies>
