--- a/deliver-elda/pom.xml
+++ b/deliver-elda/pom.xml
@@ -4,14 +4,14 @@
   <parent>
     <artifactId>lda-top</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>1.2.9</version>
+    <version>1.2.10-SNAPSHOT</version>
   </parent>
 
   <groupId>com.epimorphics.lda</groupId>
   <artifactId>elda-standalone</artifactId>
   <packaging>war</packaging>
   <name>elda</name>
-  <version> 1.2.9</version>
+  <version> 1.2.10-SNAPSHOT</version>
   <description>instant Elda webapp</description>
 
   <dependencies>
