--- a/json-rdf/pom.xml
+++ b/json-rdf/pom.xml
@@ -44,6 +44,25 @@
            </execution>
          </executions>
       </plugin>
+
+        <plugin>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <version>1.7</version><!--$NO-MVN-MAN-VER$-->
+            <executions>
+                <execution>
+                    <phase>generate-sources</phase>
+                    <configuration>
+                        <target>
+                            <property name="classpath" refid="maven.compile.classpath"/>
+                            <ant/>
+                        </target>
+                    </configuration>
+                    <goals>
+                        <goal>run</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
       
           <plugin>
 		      <artifactId>maven-source-plugin</artifactId>
