--- a/json-rdf/pom.xml
+++ b/json-rdf/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>lda-top</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>1.2.10-SNAPSHOT</version>
+    <version>1.2.10</version>
   </parent>
 
   <groupId>com.epimorphics.lda</groupId>
@@ -29,7 +29,7 @@
     </dependency>
 
   </dependencies>
-  <version>1.2.10-SNAPSHOT</version>
+  <version>1.2.10</version>
   <build>
      <plugins>
        <plugin>
@@ -53,8 +53,8 @@
                     <phase>generate-sources</phase>
                     <configuration>
                         <target>
-                            <property name="classpath" refid="maven.compile.classpath"/>
-                            <ant/>
+                            <property name="classpath" refid="maven.compile.classpath" />
+                            <ant />
                         </target>
                     </configuration>
                     <goals>
