--- a/pom.xml
+++ b/pom.xml
@@ -110,7 +110,7 @@
     <dependency>
         <groupId>org.apache.jena</groupId>
         <artifactId>jena-larq</artifactId>
-        <version>1.0.0-incubating-SNAPSHOT</version>
+        <version>1.0.0-incubating</version>
     </dependency>
 
     <dependency>
