Corrected names in poms for greater build comprehensibility. Go rid of duff reference to lda 1.2.6-SNAPSHOT.

--- a/deliver-elda/pom.xml
+++ b/deliver-elda/pom.xml
@@ -10,7 +10,7 @@
   <groupId>com.epimorphics.lda</groupId>
   <artifactId>elda-standalone</artifactId>
   <packaging>war</packaging>
-  <name>elda</name>
+  <name>elda-standalone</name>
   <version> 1.2.14-SNAPSHOT</version>
   <description>instant Elda webapp</description>
 
