--- a/deliver-elda/src/main/webapp/WEB-INF/web.xml
+++ b/deliver-elda/src/main/webapp/WEB-INF/web.xml
@@ -21,7 +21,7 @@
   	<servlet-class>com.epimorphics.lda.routing.Loader</servlet-class>
   	<init-param>
 	<param-name>com.epimorphics.api.initialSpecFile</param-name>
-        <param-value>specs/mini-education.ttl</param-value>
+        <param-value>specs/full-education.ttl</param-value>
   	</init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
@@ -46,7 +46,7 @@
 
   <servlet-mapping>
     <servlet-name>default</servlet-name>
-    <url-pattern>/docs/*</url-pattern>
+    <url-pattern>/*</url-pattern>
   </servlet-mapping>
 
   <servlet-mapping>
